--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Countdown Timer</title>
-    <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="timer">
     <div class="timer__controls">
         <form name="customForm" id="custom">
-            <input type="text" name="minutes" placeholder="Enter Minutes">
+            <input type="number" name="minutes" placeholder="Enter Minutes">
         </form>
         <button data-time="20" class="timer__button">20 Secs</button>
         <button data-time="300" class="timer__button">Work 5</button>
