Add Stop and Play functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <button data-time="900" class="timer__button">Quick 15</button>
         <button data-time="1200" class="timer__button">Snack 20</button>
         <button data-time="3600" class="timer__button">Lunch Break</button>
+        <button class="timer__button -start -green" disabled>Start</button>
+        <button class="timer__button -stop -red" disabled>Stop</button>
+        <button class="timer__button -workout -blue" disabled>Work out</button>
     </div>
     <div class="display">
         <h1 class="display__time-left"></h1>
